--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
+    "twilio": "^3.66.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
